results/SVCOMP/4-shot/log-ExSymExe10-2024_03_18_17_22_12.txt
class Main {
  static int field;

  //@ ensures \result ==> field == 9 && x * field + y <= 0 && x <= 0;
  //@ ensures !\result ==> field != 9 || x * field + y > 0 || x > 0;
  public static boolean f() {
    int x = 3; 

    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }

  //@ requires x == 3;
  //@ requires z == 9;
  //@ ensures \result ==> x * z + 3 <= 0 && x <= 0;
  //@ ensures !\result ==> x * z + 3 > 0 || x > 0;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe10");
    int y = 3;
    x = x * z;
    z = -x + y;
    if (z <= 0) System.out.println("branch FOO1");
    else {
      System.out.println("branch FOO2");
      return false;
    }
    if (x <= 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && x * field + y <= 0 && x <= 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: cannot find symbol
  //@ ensures \result ==> field == 9 && x * field + y <= 0 && x <= 0;
                                        ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && x * field + y <= 0 && x <= 0;
                                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: cannot find symbol
  //@ ensures \result ==> field == 9 && x * field + y <= 0 && x <= 0;
                                                    ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:4: error: cannot find symbol
  //@ ensures \result ==> field == 9 && x * field + y <= 0 && x <= 0;
                                                              ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field != 9 || x * field + y > 0 || x > 0;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: cannot find symbol
  //@ ensures !\result ==> field != 9 || x * field + y > 0 || x > 0;
                                         ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field != 9 || x * field + y > 0 || x > 0;
                                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: cannot find symbol
  //@ ensures !\result ==> field != 9 || x * field + y > 0 || x > 0;
                                                     ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe10.java:5: error: cannot find symbol
  //@ ensures !\result ==> field != 9 || x * field + y > 0 || x > 0;
                                                              ^
  symbol:   variable x
  location: class Main
10 errors

